--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
             "react": "~0.8.0",
             "director": "~1.2.2",
             "requirejs": "~2.1.10",
-            "require-jsx": ""
+            "require-jsx": "",
+            "cortex": "drfloob/cortex#feature-enum-delete"
 	}
 }
