--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,6 @@
             "director": "~1.2.2",
             "requirejs": "~2.1.10",
             "require-jsx": "",
-            "cortex": "drfloob/cortex#feature-enum-delete"
+            "cortex": "mquan/cortex"
 	}
 }
