replace Cortex with Chinchilla (data model library)
Chinchilla's immutable structures, dictionary sugar, and fast subtree
modification checking make it powerful. It may already be ready for
petehunt/react-raf-batching (big performance boost). Example
reimplemented in Chinchilla.

--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,6 @@
             "director": "~1.2.2",
             "requirejs": "~2.1.10",
             "require-jsx": "",
-            "cortex": "mquan/cortex"
+            "chinchilla": "drfloob/chinchilla"
 	}
 }
